# word-prediction

./: .gitignore  README.md  index.md  main.py  process-cetemp.sh  pyproject.toml
scripts/: __init__.py
scripts/cetemp/: README.md  cnt2arpa.py  process-cetemp.sh  raw2xml.sh  sl2spacy.py  split_train_test_dev.py  xml2json.sh  xml2sl.pl
tests/: conftest.py  test_ngram.py
word_prediction/: __init__.py  lm.py  ngram.py  nwp.py  trie.py
wp/: __init__.py  ngram.py
