[tool.poetry]
name = "word-prediction"
version = "0.1.0"
description = "Next word prediction system, developed on top of spaCy library."
authors = ["João Fé <joaofe2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.0.6"
gdown = "^3.13.0"
nltk = "^3.6.2"
jupyter = "^1.0.0"
ngram-lm = "^0.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.scripts]
download-data = "scripts:download_data"
download-models = "scripts:download_models"

#[[tool.poetry.source]]
#name = "testpypi"
#url = "https://test.pypi.org/simple/"
#secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
